# acoustic-localization-twin

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
dashboard/: panel.py
docs/: claude-code-hooks-reference.md  concepts.ipynb  decision-log.md  functional-report.md  project-status.md
engine/: confidence.py  engine.py  localizer.py  propagation.py  source.py  tdoa.py
scenarios/: loader.py
scenarios/configs/: wildlife_monitoring.yaml
scripts/: governance_check.ps1  render_frame.py  run_demo.py  run_live.py  run_panel.py  run_tdoa_demo.py  session_start.ps1
shared/: state.py
tests/: test_localizer.py  test_propagation.py  test_tdoa.py
visualization/: live_renderer.py  renderer.py
