[project]
name = "acoustic-localization-twin"
version = "0.1.0"
description = "Real-time acoustic source localization digital twin"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pyvista>=0.43",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
